docs/style.css
:root {
  --max-width: 960px;
  --spacing-md: 1rem;
  --fg-normal: #fff;
  --bg-normal: #000;
  --font-mono: Courier New, monospace;
  --font-sans: Arial, sans-serif;
}
.theme-light {
  --fg-normal: #000;
  --bg-normal: #fff;
}
*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
}
html, body { width: 100vw; min-height: 100vh; }
body {
  padding-top: .5rem;
  background: var(--bg-normal);
  color: var(--fg-normal);
  font: 16px var(--font-sans);
}
/* -- LAYOUT -- */
.print {
  display: none;
  color: var(--fg-default);
}
@media print {
  .no-print, .no-print * { display: none !important;}
  .print { display: block; }
}
.container {
  max-width: var(--max-width);
  margin: 0 auto;
  padding: 0 var(--spacing-md);
}
.flex { display: flex; }
.flex-wrap { flex-wrap: wrap; }
.flex-1 { flex: 1; }

.md-25, .md-50,
.lg-25, .lg-50 {
  width: 100%;
}
@media all and (min-width: 600px) {
  .md-25 { width: 25%; }
  .md-50 { width: 50%; }
  .md-flex-1 { flex: 1; }
}
@media all and (min-width: 900px) {
  .lg-25 { width: 25%; }
  .lg-50 { width: 50%; }
  .lg-flex-1 { flex: 1; }
}
section {
  margin-bottom: 1rem;
}
/* -- Typography -- */
h1, h2, h3, h4, h5, h6, p,
ul, ol {
  margin-bottom: var(--spacing-md);
}
h1 { font-size: 2rem; }
h2 { font-size: 1.75rem; }
h3 { font-size: 1.5rem; }
p { font-size: 1rem; }
.subheading {
  font-size: .75em;
  opacity: .75;
}
h1, h2, h3, .subheading {
  font-family: var(--font-mono);
}
ul, ol {
  &.unstyled {
    list-style: none;
    padding: 0;
  }
}

a, a:visited {
  color: var(--fg-normal);
  &:hover, &:active, &:focus {
    color: var(--fg-normal);
  }
}

img {
  width: 100%;
  object-fit: cover;
}

.icon {
  width: 1em;
  height: 1em;
  vertical-align: -0.125em;
  fill: var(--fg-normal);
}

button, select {
  border: 1px solid var(--fg-normal);
  background: var(--fg-normal);
  color: var(--bg-normal);
}

#settings {
  position: sticky;
  top: 0;
  padding: .5rem 0;
  /* match body padding y */
  margin-bottom: .5rem;
  background: var(--bg-normal);
  ul.flex {
    justify-content: flex-end;
    margin-bottom: 0;
  }
  li:not(:last-child) {
    margin-right: .25rem;
  }
}
@media all and (max-width: 700px) {
  #profile .subheading {
    display: block;
  }
}
#skills li {
  font: .75rem var(--font-mono);
}
#experience {
  h3 {
    .year {
      font-size: 1rem;
      opacity: .75;
    }
  }
  .content {
    padding-left: 1rem;
    border-left: 1px dashed var(--fg-normal);
  }
}
.tech-stack {
  li {
    padding: .25rem;
    margin-right: .5rem;
    margin-bottom: .5rem;
    font: .675rem var(--font-mono);
    line-height: 1;
    background: var(--fg-normal);
    color: var(--bg-normal);
  }
}

